src/main/kotlin/com/example/mylogbackend/global/error/ErrorProperty.kt
package com.example.mylogbackend.global.error

interface ErrorProperty{
    val status: Int
    val message: String
}